primo commit del branch flexbox

--- a/mini.css
+++ b/mini.css
@@ -1,22 +1,30 @@
 body {
-    max-width: none;
-    display: grid;
-    grid-template-areas: 'header'
-                         'menu'
-                         'social'
-                         'main'
-                         'footer';
+    max-width: 1024px;
+    
 }
 
-#menu, #social {
+#menu {
     text-align: center;
-    font-size: large;
+    font-size: 2em;
+    width: 90%;
+    float:left;
 }
 
-#menu li, #social li {
-    display: block;
+#social{
+    float: right;
+    
+    font-size: 2em;
+    width: 90%;
+}
+
+main{
+    float: left;
+}
+
+main h1{
+    text-align: center;
 }
 
 #mainSocial {
-    grid-template-columns: 1fr;
+float: left;
 }
