aggiunto commento con 2 palette

--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+/*--kelly-green: #68C106ff;
+--dogwood-rose: #D80069ff;
+--celadon-green: #118A81ff;
+--deep-jungle-green: #09514Aff;
+--tea-green: #C2D5A1ff;
+
+--cambridge-blue: #A2CCBBff;
+--barbie-pink: #D92680ff;
+--rosso-corsa: #C90101ff;
+--indigo: #4C006Aff;
+--acid-green: #BFCB02ff;
+*/
+
 * {
 	padding: 0em;
 	margin: 0em;
