--- a/mini.css
+++ b/mini.css
@@ -1,19 +1,20 @@
-header h1 {
-    font-size: 5em;
-  }
+main h2 {
+  font-size: 2.5em;
+}
 
-  main h2{
-    font-size: 2.5em;
-  }
+main h3 {
+  font-size: 1.5em;
+}
 
-  main h3{
-    font-size: 1.5em;
-  }
+main,
+a {
+  font-size: 1.8em;
+}
 
-  main, a {
-    font-size: 1.8em;
-  }
+#linkmenu {
+  font-size: 2em;
+}
 
-  #linkmenu{
-    font-size: 2em;
-  }
+a:link, a:visited {
+  width: 90%;
+}
